--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -33,7 +33,7 @@ jobs:
     env:
       SUFFIX: ${{ matrix.variant != 'full' && format('-{0}', matrix.variant) || '' }}
       IS_MAIN_PUSH: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-      IS_TAG_REF: ${{ startsWith(github.ref, 'refs/tags/') }}
+      IS_TAG: ${{ startsWith(github.ref, 'refs/tags/') }}
 
     steps:
       - name: Repository checkout
