--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,48 +70,41 @@ optional-dependencies.testing = [
   "pytest-mock",
   "pytest-structlog",
 ]
-urls.Changelog = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
-urls.Documentation = "https://github.com/albertodonato/query-exporter"
-urls.Homepage = "https://github.com/albertodonato/query-exporter"
+urls."Changelog" = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
+urls."Documentation" = "https://github.com/albertodonato/query-exporter"
+urls."Homepage" = "https://github.com/albertodonato/query-exporter"
 urls."Issue Tracker" = "https://github.com/albertodonato/query-exporter/issues"
 urls."Release Notes" = "https://github.com/albertodonato/query-exporter/blob/main/CHANGES.rst"
 urls."Source Code" = "https://github.com/albertodonato/query-exporter"
 scripts.query-exporter = "query_exporter.main:script"
 
-[tool.setuptools.dynamic]
-version = { attr = "query_exporter.__version__" }
-
-[tool.setuptools.package-data]
-query_exporter = [ "py.typed" ]
-
-[tool.setuptools.packages.find]
-include = [ "query_exporter*" ]
+[tool.setuptools]
+dynamic.version = { attr = "query_exporter.__version__" }
+package-data.query_exporter = [ "py.typed" ]
+packages.find.include = [ "query_exporter*" ]
 
 [tool.ruff]
 line-length = 79
-
 lint.select = [ "F", "I", "RUF", "UP" ]
 lint.isort.combine-as-imports = true
 lint.isort.force-sort-within-sections = true
 
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-asyncio_default_fixture_loop_scope = "function"
-markers = [
+[tool.pytest]
+ini_options.asyncio_mode = "auto"
+ini_options.asyncio_default_fixture_loop_scope = "function"
+ini_options.markers = [
   "database_only: only run test on specified database(s)",
   "database_exclude: don't run test on specified database(s)",
 ]
-testpaths = [
+ini_options.testpaths = [
   "tests",
 ]
 
-[tool.coverage.report]
-fail_under = 100.0
-show_missing = true
-skip_covered = true
-
-[tool.coverage.run]
-source = [ "query_exporter" ]
+[tool.coverage]
+run.source = [ "query_exporter" ]
+report.fail_under = 100.0
+report.show_missing = true
+report.skip_covered = true
 
 [tool.mypy]
 ignore_missing_imports = true
