--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,15 +6,6 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  build:
-    name: Build packages
-    uses: ./.github/workflows/run-tox.yaml
-    with:
-      python-version: "3.14"
-      tox-env: build-packages
-      artifact-name: packages
-      artifact-path: dist/
-
   release:
     runs-on: ubuntu-latest
     needs:
@@ -23,11 +14,21 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Download built packages
-        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
+      - name: Repository checkout
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Set up Python
+        uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
         with:
-          name: packages
-          path: dist/
+          python-version: "3.14"
+
+      - name: Install build tool
+        run: |
+          pip install build
+
+      - name: Build packages
+        run: |
+          python -m build
 
       - name: Publish packges to PyPI
         uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
