chore: use run-tox reusable workflow from repo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,14 +12,14 @@ on:
 jobs:
   lint:
     name: Lint
-    uses: ./.github/workflows/run-tox.yaml
+    uses: albertodonato/github-workflows/.github/workflows/run-tox.yaml@a66638ef339967bc8099ab93e648f85852de2c28 # v.0.0.2
     with:
       python-version: "3.14"
       tox-env: lint
 
   check:
     name: Check
-    uses: ./.github/workflows/run-tox.yaml
+    uses: albertodonato/github-workflows/.github/workflows/run-tox.yaml@a66638ef339967bc8099ab93e648f85852de2c28 # v.0.0.2
     with:
       python-version: ${{ matrix.python-version }}
       tox-env: check
@@ -34,7 +34,7 @@ jobs:
 
   test:
     name: Unit tests
-    uses: ./.github/workflows/run-tox.yaml
+    uses: albertodonato/github-workflows/.github/workflows/run-tox.yaml@a66638ef339967bc8099ab93e648f85852de2c28 # v.0.0.2
     with:
       python-version: ${{ matrix.python-version }}
       tox-env: coverage
@@ -49,7 +49,7 @@ jobs:
 
   integration-test:
     name: Integration tests
-    uses: ./.github/workflows/run-tox.yaml
+    uses: albertodonato/github-workflows/.github/workflows/run-tox.yaml@a66638ef339967bc8099ab93e648f85852de2c28 # v.0.0.2
     with:
       python-version: "3.14"
       tox-env: integration-tests
